--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,9 @@
 {
+  "db": "xxxxx",
+  "oauthurl": "https://wamsprodglobal001acs.accesscontrol.windows.net/v2/OAuth2-13",
+  "client_id": "xxxxx",
+  "client_secret": "xxxxx",
+  
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
